# urlshortener

./: .gitignore  .qovery.yml  Dockerfile  README.md  docker-compose.yml  setup.cfg  setup.py  tox.ini
urlshortener/: main.py  test_main.py
