[metadata]
name = urlshortener
home-page = urlshortener
summary = Url encoder
description-file = README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
    urlshortener

include_package_data = true

install_requires =
    fastapi[all]
    databases[postgresql]
    uvicorn
    tenacity
    gunicorn

[options.extras_require]
test =
    pytest
    docker-compose

[build_wheel]
universal = 1
